# aoc-2025

./: 01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c  10.c  10.py  11.c  12.py  CMakeLists.txt  README.md
